--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet">
 
 		<script
 		  src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -18,27 +19,27 @@
 	<div class="container">
 		<div class="content">
 			<div class="title">
-			<h1>The Office Trivia Challenge</h1>
-			<p class="stats">Correct: <span id="correct">0</span></p>
-			<p class="stats">Incorrect: <span id="wrong">0</span></p>
-			<p class="stats">No Answer: <span id="noAnswer">0</span></p>
+				<h1>trivia challenge</h1>
+				<p class="stats">correct: <span id="correct">0</span></p>
+				<p class="stats">incorrect: <span id="wrong">0</span></p>
+				<p class="stats">no answer: <span id="noAnswer">0</span></p>
 			</div>
-			<div class="button"><button id="start" type="button">Begin</div>
-			<div class="button"><button id="restart" type="button">Restart</div>
-			<div id="timer">Time Remaining: <span id="timeRemaining"></span></div>
-			<div id="question"></div>
-			<div id="answers">
-				<span id="transition"></span>
-				<div class="choice" id="ans1"></div>
-				<div class="choice" id="ans2"></div>
-				<div class="choice" id="ans3"></div>
-				<div class="choice" id="ans4"></div>
+
+			<div class="button"><button id="start" type="button">begin</button></div>
+			<div class="button"><button id="restart" type="button">restart</button></div>
+			<div class="ui">
+				<div id="timer">time remaining:<span id="timeRemaining"></span></div>
+				<div id="question"></div>
+				<div id="answers">
+					<span id="transition"></span>
+					<div class="choice" id="ans1"></div>
+					<div class="choice" id="ans2"></div>
+					<div class="choice" id="ans3"></div>
+					<div class="choice" id="ans4"></div>
+				</div>
 			</div>
 		</div>
 	</div>
-
-
-
 
 	<script src="assets/javascript/app.js"></script>
 	</body>
